fixed book show feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
 		</ul>
 	</div>
-	<div id="show-panel"></div>
+	<div id="show-panel">
+		<h3 id="bookTitle"></h3>
+		<p id="bookDescrip"></p>
+		<img id="bookImg" src="" alt="">
+		<div id="bookUsers">
+		</div>
+	</div>
 	<script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
